update to 1.17; revert to mass transformation from EnchantmentWrapper; remove {put,get}{Byte,Short} -> {put,get}Int