@@ -16,6 +16,7 @@ import user11681.limitless.config.anvil.entry.AnvilNormalizationEntry;
 import user11681.limitless.config.common.CostDisplay;
 import user11681.limitless.enchantment.ExperienceUtil;
 
+@SuppressWarnings("ConstantConditions")
 @Mixin(AnvilScreen.class)
 abstract class AnvilScreenMixin extends HandledScreen<AnvilScreenHandler> {
     public AnvilScreenMixin(AnvilScreenHandler handler, PlayerInventory inventory, Text title) {
@@ -34,16 +35,16 @@ abstract class AnvilScreenMixin extends HandledScreen<AnvilScreenHandler> {
                index = 1)
     public Object[] showNormalizedCost(Object[] arguments) {
         int cost = this.handler.getLevelCost();
-        PlayerEntity player = this.playerInventory.player;
+        PlayerEntity player = this.client.player;
         AnvilNormalizationEntry normalization = LimitlessConfiguration.instance.anvil.normalization;
 
-        if (normalization.enabled && normalization.display != CostDisplay.NORMAL && !player.abilities.creativeMode && player.experienceLevel > cost) {
+        if (normalization.enabled && normalization.display != CostDisplay.NORMAL && !player.getAbilities().creativeMode && player.experienceLevel > cost) {
             int relative = ExperienceUtil.normalizedCost(player, cost);
 
             if (normalization.display == CostDisplay.REPLACE) {
                 arguments[0] = Integer.toString(relative);
             } else {
-                arguments[0] += String.format(" (%s)", relative);
+                arguments[0] += " (%s)".formatted(relative);
             }
         }
 
